--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ body{
   color: var(--on-background);
   font-size: var(--fs-body);
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 :focus-visible{
@@ -167,9 +168,88 @@ body{
 
 .title{
   font-size: var(--fs-title);
+}
+
+.img-cover{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.title,
+.heading,
+.title-large{
   font-weight: var(--weight-bold);
   letter-spacing: 0.5px;
 }
+
+.heading{
+  color: var(--white);
+  font-size: var(--fs-heading);
+  line-height: 1.2;
+}
+
+.title-large{
+  font-size: var(--fs-title-lg);
+}
+
+.meta-item{
+  display: flex;
+  align-items: center;
+  gap: 4px; 
+}
+
+.btn{
+  color: var(--white);
+  font-size: var(--fs-button);
+  font-weight: var(--weight-bold);
+  max-width: max-content;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  padding-block: 12px;
+  padding-inline: 12px 20px;
+  border-radius: var(--radius-8);
+  transition: var(--transition-short);
+}
+
+.title-wrapper{
+  margin-block-end: 24px;
+}
+
+.slider-list{
+  margin-inline: -20px;
+  overflow-x: overlay;
+  padding-block-end: 16px;
+  margin-block-end: -16px;
+}
+
+.slider-list::-webkit-scrollbar-thumb{
+  background-color: transparent;
+}
+
+.slider-list:is(:hover, :focus-within)::-webkit-scrollbar-thumb{
+  background-color: var(--banner-background);
+}
+
+.slider-list::-webkit-scrollbar-button{
+  width: 20px;
+}
+
+.slider-list .slider-inner{
+  position: relative;
+  display: flex;
+  gap: 20px;
+}
+
+.slider-list .slider-inner::before,
+.slider-list .slider-inner::after{
+  content: "";
+  min-width: 4px;
+}
+
+
+
 
 /*-----------------------------------*\
   #HEADER
@@ -390,6 +470,261 @@ body{
 /*-----------------------------------*\
   #HOME PAGE
 \*-----------------------------------*/
+
+.container{
+  position: relative;
+  background-color: var(--surface);
+  color: var(--on-surface);
+  padding: 24px 20px 45px;
+  height: calc(100vh - 96px);
+  overflow-y: overlay;
+  z-index: 1;
+}
+
+.container::after{
+  content: "";
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-image: linear-gradient(var(--bottom-overlay));
+  z-index: 1;
+  pointer-events: none;
+}
+
+.card-badge{
+  background-color: var(--banner-background);
+  color: var(--white);
+  font-size: var(--fs-label);
+  font-weight: var(--weight-bold);
+  padding-inline: 6px;
+  border-radius: var(--radius-4);
+}
+
+.poster-box{
+  background-image: url(../images/poster-bg-icon.png);
+  aspect-ratio: 2 / 3;
+}
+
+.poster-box,
+.video-card
+{
+  background-repeat: no-repeat;
+  background-size: 50px;
+  background-position: center;
+  border-radius: var(--radius-16);
+  overflow: hidden;
+}
+
+
+
+.banner{
+  position: relative;
+  height: 700px;
+  border-radius: var(--radius-24); 
+  overflow: hidden;
+}
+
+.banner-slider .slider-item
+{
+  position: absolute;
+  top: 0;
+  left: 120%;
+  width: 100%;
+  height: 100%;
+  background-color: var(--banner-background);
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition-long);
+}
+
+.banner-slider .slider-item::before{
+  content: "";
+  position: relative;
+  inset: 0;
+  background-image: linear-gradient(var(--banner-overlay));
+}
+
+.banner-slider .active{
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+
+}
+
+.banner-content{
+  position: absolute;
+  left: 24px;
+  right: 24px;
+  bottom: 260px;
+  z-index: 1;
+  color: var(--text-color);
+}
+
+.banner:is(.heading, .banner-text){
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.banner .heading{
+  -webkit-line-clamp: 3;
+  margin-block-end: 16px;
+}
+
+.meta-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+}
+
+
+.banner .genre{
+  margin-block: 12px;
+}
+
+.banner-text{
+  -webkit-line-clamp: 2;
+  margin-block-end: 24px;
+}
+
+.banner .btn{
+  background-color: var(--primary);
+}
+
+.banner .btn:is(:hover, :focus-visible){
+  box-shadow: var(--shadow-2);
+}
+
+
+.slider-control{
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 0;
+  border-radius: var(--radius-16) 0 0 var(--radius-16);
+  user-select: none;
+  padding: 4px 0 4px 4px;
+  overflow-y: auto;
+}
+
+.slider-control::-webkit-scrollbar{
+  display: none;
+}
+
+.control-inner{
+  display: flex;
+  gap: 12px;
+}
+
+.control-inner::after{
+  content: "";
+  min-width: 12px;
+}
+
+.slider-control .slider-item{
+  width: 100px;
+  border-radius: var(--radius-8);
+  flex-shrink: 0;
+  filter: brightness(0.4);
+}
+
+.slider-control .active{
+  filter: brightness(1);
+  box-shadow: var(--shadow-1);
+}
+
+
+/* -------------------------------------- movie list --------------------------------------------------- */
+
+.movie-list{
+  padding-block-start: 32px; 
+ }
+ 
+ .movie-card{
+   /* border: 2px solid red; */
+   position: relative;
+   min-width: 200px;
+ }
+ 
+ .movie-card .card-banner{
+   min-width: 100%;
+ }
+ 
+ .movie-card .title{
+   width: 100%;
+   white-space: nowrap;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   margin-block: 8px 4px;
+ }
+ 
+ .card-badge{
+   background-color : var(--banner-background);
+   color: var(--white);
+   font-size: var(--fs-label);
+   font-weight: var(--weight-bold);
+   padding-inline: 6px;
+   border-radius: var(--radius-4);
+ }
+ 
+ 
+ .meta-list{
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: flex-start;
+   align-items: center;
+   gap: 12px;
+ }
+ 
+ .meta-item{
+   display: flex;
+   align-items: center;
+   gap: 4px;
+ }
+ 
+ .img-cover{
+   width: 100%;
+   height: 100%;
+   /* margin-right: -10px; */
+   object-fit: cover;
+ }
+ 
+ .title-larger{
+   font-size: var(--fs-title-lg);
+   font-weight: var(--weight-bold);
+   letter-spacing: 0.5px;
+ }
+ 
+ .movie-card .card-banner{
+   min-width: 100%;
+ }
+ 
+ .movie-card .meta-list{
+   justify-content: space-between;
+ }
+ 
+ .movie-card .card-btn{
+   position: absolute;
+   inset: 0;
+ }
+ 
+ .movie-card .title{
+   font-size: 19px;
+ }
+
+ .poster-box{
+  background-repeat: no-repeat;
+  background-size: 50px;
+  background-position: center;
+  background-color: var(--banner-background);
+  border-radius: var(--radius-16);
+  overflow: hidden;
+  aspect-ratio: 2/3;
+}
 
 /*-----------------------------------*\
   #DETAIL PAGE
